--- a/views/resources/insomnia.html
+++ b/views/resources/insomnia.html
@@ -31,6 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/profile">Home</a></li>
+                    <li><a href="/notes">Notes</a></li>
                     <li><a href="/topic">Add Topic</a></li>
                     <li class='active'><a href="/resources">Resources</a></li>
                     <li class="dropdown">
@@ -81,8 +82,9 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <!-- why on earth do these files need a slash to link? The index file doesn't. that's bizzare -->
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
