--- a/views/resources/index.html
+++ b/views/resources/index.html
@@ -31,6 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/profile">Home</a></li>
+                    <li><a href="/notes">Notes</a></li>
                     <li><a href="/topic">Add Topic</a></li>
                     <li class='active'><a href="/resources">Resources</a></li>
                     <li class="dropdown">
