--- a/views/users/profile.html
+++ b/views/users/profile.html
@@ -55,15 +55,21 @@
             <p>just some filler text up in hurrjust some filler text up in hurrjust some filler text up in hurrjust some filler text up in hurrjust some filler text up in hurr</p>
         </div>
     </div>
-    <!-- TODO work on this section -->
-    <section>
-        Welcome to your profile, {{user.email}}
 
-        <button class='insomnia event eating'>ate foods</button>
-        <button class='insomnia event exercise'>work it girllll</button>
-        <button class='insomnia event meditate'>thinking sucks, stop that</button>
-
-    </section>
+    <div class="body">
+        <section>
+            <h3>Welcome to your profile, {{user.email}}</h3>
+            <div class='user events'>
+                <!-- would need to variablize values here and query the based on topic selected -->
+                <button class='insomnia event' value="eating">ate foods</button>
+                <button class='insomnia event' value="exercise">worked output</button>
+                <button class='insomnia event' value="meditate">thinking sucks so i stopped</button>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+    </div>
 
     <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
         <div class="container">
