chart basics sorted

--- a/views/index.html
+++ b/views/index.html
@@ -30,6 +30,11 @@
             </div>
         </div>
     </div>
+    <!-- <div class="container">
+        <div class="jumbotron text-center">
+            <canvas id="myChart" width="300" height="100"></canvas>
+        </div>
+    </div> -->
     <div class='form-container'>
         <div class="login box">
             <h1>Login</h1>
@@ -54,6 +59,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
