--- a/views/resources/insomnia.html
+++ b/views/resources/insomnia.html
@@ -32,18 +32,17 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/profile">Home</a></li>
                     <li><a href="/notes">Notes</a></li>
+                    <li><a href="/forum">Forum</a></li>
                     <li><a href="/topic">Add Topic</a></li>
                     <li class='active'><a href="/resources">Resources</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<b class='caret'></b></a>
                         <ul class='dropdown-menu'>
-                            <li class='dropdown-header'>{{user.name}}</li>
-                            <li><a href="/logout">logout</a></li>
-                            <li><a href="#">admin1</a></li>
-                            <li><a href="#">admin2</a></li>
-                            <li class='dropdown-header'>Portfolio</li>
-                            <li><a href="#">port1</a></li>
-                            <li><a href="#">port2</a></li>
+                            <li><a href="/logout">Log Out</a></li>
+                            <li><a href="#">#</a></li>
+                            <li class='dropdown-header'>#</li>
+                            <li><a href="#">#</a></li>
+                            <li><a href="#">#</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -84,6 +83,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- why on earth do these files need a slash to link? The index file doesn't. that's bizzare -->
     <script src="/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
     <script src="/js/script.js"></script>
 </body>
 
