--- a/views/topics/index.html
+++ b/views/topics/index.html
@@ -7,12 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>trel·lis - Topics</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <link href="/css/custom.css" rel="stylesheet">
 </head>
 
@@ -32,18 +26,17 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/profile">Home</a></li>
                     <li><a href="/notes">Notes</a></li>
+                    <li><a href="/forum">Forum</a></li>
                     <li class='active'><a href="/topic">Add Topic</a></li>
                     <li><a href="/resources">Resources</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<b class='caret'></b></a>
                         <ul class='dropdown-menu'>
-                            <li class='dropdown-header'>{{user.name}}</li>
-                            <li><a href="/logout">logout</a></li>
-                            <li><a href="#">admin1</a></li>
-                            <li><a href="#">admin2</a></li>
-                            <li class='dropdown-header'>Portfolio</li>
-                            <li><a href="#">port1</a></li>
-                            <li><a href="#">port2</a></li>
+                            <li><a href="/logout">Log Out</a></li>
+                            <li><a href="#">#</a></li>
+                            <li class='dropdown-header'>#</li>
+                            <li><a href="#">#</a></li>
+                            <li><a href="#">#</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -78,6 +71,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
     <script src="js/script.js"></script>
 </body>
 
