--- a/views/users/profile.html
+++ b/views/users/profile.html
@@ -7,12 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>trel·lis - Home</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <link href="/css/custom.css" rel="stylesheet">
 </head>
 
@@ -32,131 +26,174 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class='active'><a href="/profile">Home</a></li>
                     <li><a href="/notes">Notes</a></li>
+                    <li><a href="/forum">Forum</a></li>
                     <li><a href="/topic">Add Topic</a></li>
                     <li><a href="/resources">Resources</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<b class='caret'></b></a>
                         <ul class='dropdown-menu'>
-                            <li class='dropdown-header'>{{resData.user.name}}</li>
-                            <li><a href="/logout">logout</a></li>
-                            <li><a href="#">admin2</a></li>
-                            <li class='dropdown-header'>Portfolio</li>
-                            <li><a href="#">port1</a></li>
-                            <li><a href="#">port2</a></li>
+                            <li><a href="/logout">Log Out</a></li>
+                            <li><a href="#">#</a></li>
+                            <li class='dropdown-header'>#</li>
+                            <li><a href="#">#</a></li>
+                            <li><a href="#">#</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
+
     <div class="container">
         <div class="jumbotron text-center">
-            <div class= 'chart-container'>
-                <canvas id="myChart" style='height: 100%'></canvas>
+            <div class='chart-container'>
+                <canvas id="sleepRecords" style='height: 35%'></canvas>
+            </div>
+            <div class='chart-container'>
+                <canvas id="myChart" style='height: 65%'></canvas>
             </div>
             <!-- the options were to put this js in the html and add data via mustache, or
-            re-route everything through ajax to get the data into the script.js. both options suck -->
+            re-route everything through ajax to get the data into the script.js, doubling the load time. both options suck -->
             <script type="text/javascript">
-            const ctx = document.querySelector("#myChart").getContext("2d");
-            const config = {
-                type: 'line',
-                data: {
-                    labels: [
-                        {{#resData.thisWeek}}
-                            '{{label}}',
-                        {{/resData.thisWeek}}
-                    ],
-                    datasets: [{
-                        label: "Eating Schedule",
-                        backgroundColor: 'rgba(40, 118, 226, .8)',
-                        borderColor: 'rgba(40, 118, 226, .8)',
-                        data: [1, 1, 1, 1, 1, 1, 1],
-                        fill: false,
-                        pointRadius: 10,
-                        pointHoverRadius: 15,
-                        showLine: false
-                    }, {
-                        label: "Meditation",
-                        fill: false,
-                        backgroundColor: 'rgba(72, 190, 255, 1)',
-                        borderColor:  'rgba(72, 190, 255, 1)',
-                        data: [2, 2, 2, 2, 2, 2, 2],
-                        fill: false,
-                        pointRadius: 10,
-                        pointHoverRadius: 15,
-                        showLine: false
-                    }, {
-                        label: "Exercise",
-                        fill: false,
-                        backgroundColor: 'rgba(18, 183, 131, .8)',
-                        borderColor: 'rgba(18, 183, 131, .8)',
-                        data: [3, 3, 3, 3, 3, 3, 3],
-                        fill: false,
-                        pointRadius: 10,
-                        pointHoverRadius: 15,
-                        showLine: false
-                    }]
-                },
-                options: {
-                    layout: {
-                        padding: {
-                            top: 20,
-                            rigth: 15
-                        }
-                    },
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    tooltips: {
-                        mode: 'index',
-                        intersect: false,
-                    },
-                    hover: {
-                        mode: 'nearest',
-                        intersect: true
-                    },
-                    legend: {
-                        position: 'bottom',
-                        labels: {
-                            boxWidth: 15
-                        }
-                    },
-                    scaleOverride: true,
-                    scaleSteps: 10,
-                    scaleStepWidth: 20,
-                    scaleStartValue: 0,
-                    scales: {
-                        xAxes: [{
-                            display: true
-                        }],
-                        yAxes: [{
-                            display: false,
-                            ticks: {
-                                beginAtZero: true,
-                                stepSize: 1
-                            }
+                const ctx = document.querySelector("#myChart").getContext("2d");
+                const config = {
+                    type: 'line',
+                    data: {
+                        labels: [
+                            {{#resData.thisWeek}}
+                                '{{label}}',
+                            {{/resData.thisWeek}}
+                        ],
+                        datasets: [{
+                            label: "Eating Schedule",
+                            backgroundColor: 'rgba(40, 118, 226, .8)',
+                            borderColor: 'rgba(40, 118, 226, .8)',
+                            data: [
+                                {{#resData.eating}}
+                                    '{{elem}}',
+                                {{/resData.eating}}
+                            ],
+                            fill: false,
+                            pointRadius: 10,
+                            pointHoverRadius: 15,
+                            showLine: false
+                        }, {
+                            label: "Meditation",
+                            fill: false,
+                            backgroundColor: 'rgba(72, 190, 255, 1)',
+                            borderColor: 'rgba(72, 190, 255, 1)',
+                            data: [
+                                {{#resData.meditate}}
+                                    '{{elem}}',
+                                {{/resData.meditate}}
+                            ],
+                            fill: false,
+                            pointRadius: 10,
+                            pointHoverRadius: 15,
+                            showLine: false
+                        }, {
+                            label: "Exercise",
+                            fill: false,
+                            backgroundColor: 'rgba(18, 183, 131, .8)',
+                            borderColor: 'rgba(18, 183, 131, .8)',
+                            data: [
+                                {{#resData.exercise}}
+                                    '{{elem}}',
+                                {{/resData.exercise}}
+                            ],
+                            fill: false,
+                            pointRadius: 10,
+                            pointHoverRadius: 15,
+                            showLine: false
                         }]
+                    },
+                    options: {
+                        layout: {
+                            padding: {
+                                top: 20,
+                                rigth: 15
+                            }
+                        },
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        tooltips: {
+                            enabled: false,
+                            mode: 'index',
+                            intersect: false,
+                        },
+                        hover: {
+                            mode: 'nearest',
+                            intersect: true
+                        },
+                        legend: {
+                            position: 'bottom',
+                            labels: {
+                                boxWidth: 15
+                            }
+                        },
+                        scaleOverride: true,
+                        scaleSteps: 10,
+                        scaleStepWidth: 20,
+                        scaleStartValue: 0,
+                        scales: {
+                            xAxes: [{
+                                display: true
+                            }],
+                            yAxes: [{
+                                display: false,
+                                ticks: {
+                                    beginAtZero: true,
+                                    stepSize: 1
+                                }
+                            }]
+                        }
                     }
-                }
-            };
-            window.onload = () => new Chart(ctx, config);
+                };
+                window.onload = () => new Chart(ctx, config);
             </script>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <h1>Hello</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="#" class='btn btn-primary'>hello</a>
+            </div>
+
+
+            <div class="col-md-4">
+                <h1>Hello</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="#" class='btn btn-primary'>hello</a>
+            </div>
+
+
+            <div class="col-md-4">
+                <h1>Hello</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="#" class='btn btn-primary'>hello</a>
+            </div>
         </div>
     </div>
 
-    <div class="body">
-        <section>
-            <h3>Welcome to your profile, {{resData.user.email}}</h3>
-            <div class='user events'>
-                <!-- would need to variablize values here and query the based on topic selected -->
-                <button class='insomnia event' value="eating">ate foods</button>
-                <button class='insomnia event' value="exercise">worked output</button>
-                <button class='insomnia event' value="meditate">thinking sucks so i stopped</button>
-            </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </section>
-    </div>
+
+
+
+
+    <!-- <section>
+        <h3>Welcome to your profile, {{resData.user.email}}</h3>
+        <div class='user events'> -->
+            <!-- would need to variablize values here and query the based on topic selected -->
+            <!-- <button class='insomnia event' value="eating">Ate dinner (before eleven)</button>
+            <button class='insomnia event' value="exercise">Exercised!</button>
+            <button class='insomnia event' value="meditate">Meditated!</button>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section> -->
     <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
         <div class="container">
             <div class="navbar-text pull-left">
@@ -169,6 +206,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/charts.js"></script>
 </body>
 
 </html>
