--- a/views/resources/index.html
+++ b/views/resources/index.html
@@ -43,23 +43,19 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="jumbotron text-center">
-            <h1>RESOURCES INDEX</h1>
-            <p>just some filler text up in hurrjust some filler text up in hurrjust some filler text up in hurrjust some filler text up in hurrjust some filler text up in hurr</p>
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            <section>
+                <h5>Select Topic</h5>
+                <ul>
+                    <li><a href="/resources/insomnia">Insomnia</a></li>
+                    <li><a href="#">N/A</a></li>
+                    <li><a href="#">N/A</a></li>
+                    <li><a href="#">N/A</a></li>
+                </ul>
+            </section>
         </div>
     </div>
-
-    <section>
-        <h5>Select Topic</h5>
-        <ul>
-            <li><a href="/resources/insomnia">Insomnia</a></li>
-            <li><a href="#">N/A</a></li>
-            <li><a href="#">N/A</a></li>
-            <li><a href="#">N/A</a></li>
-        </ul>
-    </section>
-
     <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
         <div class="container">
             <div class="navbar-text pull-left">
