--- a/views/topics/index.html
+++ b/views/topics/index.html
@@ -43,24 +43,22 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="jumbotron text-center">
-            <h1>TOPIC PAGE</h1>
-            <p>just some filler text up in hurrjust some filler text up in hurrjust some filler text up in hurrjust some filler text up in hurrjust some filler text up in hurr</p>
-        </div>
-    </div>
-    <!-- TODO work on this section -->
-    <section>
-        <h5>Select Topic</h5>
-        <select>
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            <section>
+                <h5>Select Topic</h5>
+                <select>
             <option class="topic-select" value=insomnia>Insomnia</option>
             <option class="topic-select" value=2>n/a</option>
             <option class="topic-select" value=3>n/a</option>
             <option class="topic-select" value=4>n/a</option>
           </select>
-        <button class="topic-select-enter" type="submit" value={{user_id}}>Submit</button>
+                <button class="topic-select-enter" type="submit" value={{user_id}}>Submit</button>
 
-    </section>
+            </section>
+        </div>
+    </div>
+
 
     <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
         <div class="container">
