--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,8 +5,79 @@
 .navbar-fixed-top .navbar-brand {
     line-height: 16px;
 }
+.navbar-default {
+    background-color: #236dd3;
+}
+.navbar-default .navbar-brand {
+    color: white;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+    color: #ffccdb;
+    background-color: #2d7eef;
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: white;
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #ffccdb;
+    background-color: #2d7eef;
+}
+
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+    color: #ffccdb;
+}
+
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+    color: #ffccdb;
+    background-color: #2d7eef;
+}
+
+.navbar-fixed-bottom {
+    background-color: #236dd3;
+    color: white;
+    height: 10px;
+}
+
+.navbar-fixed-bottom .navbar-text {
+    color: white;
+}
+.btn-primary {
+    background-color: rgba(18, 183, 131, .8);
+    height: 50px;
+    font-size: 15px;
+    margin: 20px;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.bt-primary {
+    background-color: #12b783;
+    color: #ffccdb;
+}
+
+.col-sm-6.col-sm-offset-3 {
+    border: 2px solid lightgrey;
+
+}
+
+.col-sm-6.col-sm-offset-3 > section > ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 body {
     padding-top: 70px;
+    text-align: center;
 }
 .form-container {
     height: 100vh;
@@ -17,7 +88,7 @@ body {
     justify-content: center;
 }
 .login {
-    border: 2px solid black;
+    border: 2px solid lightgrey;
     border-radius: 5px;
     width: 200px;
     height: 250px;
