--- a/views/resources/insomnia.html
+++ b/views/resources/insomnia.html
@@ -7,12 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>trel·lis - Topic FAQs</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <link href="/css/custom.css" rel="stylesheet">
 </head>
 
@@ -49,17 +43,28 @@
             </div>
         </div>
     </div>
-    <div>
-        <h1>Insomnia sucks. Here's an intro on how to deal with it.</h1>
-        <h2>disease facts</h2>
-        <br />
-        <h2>Solutions:</h2>
-        <p>cbt; long term fix</p>
+
+    <div class='col-sm-6 col-sm-offset-3 resources'>
+        <h1>Insomnia sucks.</h1>
+        <h2>Here are some things you can do about it</h2>
+        <hr />
+        <h3>disease facts</h3>
+            <nav>
+                <a href="#">link</a><br>
+                <a href="#">link</a><br>
+                <a href="#">link</a><br>
+            </nav>
+        <hr />
+        <h3>Solutions:</h3>
+        <h4>cognitive Behavioral Therapy</h4>
         <p>finding the patterns of behavior and thought that lead to issues, and changing them. That's what this is for!</p>
-        <p>SHORT TERM FIXES</p>
-        <p>drugs. diphenhydramine works, and other OTC drugs as well. There are also prescription medicines as well, but that's a topic for your doctor.</p>
-        meditation: quell that brewin' thought-storm up in there</p>
-        <p>exercise</p>
+        <h4>SHORT TERM FIXES</h4>
+        <h5>OTC drugs</h5>
+        <p>Diphenhydramine works, and other OTC drugs as well. There are also prescription medicines as well, but that's a topic for your doctor.</p>
+        <h5>Meditation</h5>
+        <p>quell that brewin' thought-storm up in there</p>
+        <h5>exercise</h5>
+        <p>duh</p>
         <p>if you've been laying in bed for 20 min or so, and sleep isn't coming, don't just lay there. Get up, meditate, accept that this happens and you'll be ok (that frustration of knowing tomorrow is going to suck is a contributing factor, annoyingly)
             go for a walk if you really need to.</p>
         <p>Then try again.</p>
